--- a/template.html
+++ b/template.html
@@ -52,7 +52,7 @@
               activeImage: '', 
               images: [],
               fetchImages() {
-                  fetch('/js/templates.json')
+                  fetch('js/templates.json')
                       .then(response => response.json())
                       .then(data => {
                             const urlParams = new URLSearchParams(window.location.search);
@@ -145,12 +145,12 @@
 
                 <div
                   x-data="{ link: '' }"
-                  x-init="fetch('/js/templates.json')
+                  x-init="fetch('js/templates.json')
                           .then(response => response.json())
                           .then(data => {
                               const urlParams = new URLSearchParams(window.location.search);
                               const templateId = urlParams.get('template');
-                              link = data[templateId].link;
+                              link = data[templateId].liveDemo;
                           });">
                   <!-- ...existing code... -->
                   <button
@@ -202,7 +202,7 @@
                   features: [],
                   async loadFeatures() {
                       const templateKey = new URLSearchParams(window.location.search).get('template');
-                      const response = await fetch('/js/templates.json');
+                      const response = await fetch('js/templates.json');
                       const data = await response.json();
                       this.features = data[templateKey]?.features || [];
                   }
@@ -225,15 +225,10 @@
 
     <div id="footer-placeholder"></div>
 
-    <script src="//unpkg.com/alpinejs"></script>
-    <script src="../js/embeds.js"></script>
-    <script src="/js/templates.json"></script>
-    <script src="/js/template-data.js"></script>
-    <script>
-      if (window.location.hostname === "modestdesigns.co.za") {
-        document.querySelector("base").setAttribute("href", "/v3/");
-      }
-    </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
+    <script src="js/embeds.js"></script>
+    <script src="js/templates.json"></script>
+    <script src="js/template-data.js"></script>
     
   </body>
 </html>
