--- a/templates.html
+++ b/templates.html
@@ -292,7 +292,7 @@
               />
             </div>
             <div class="mt-4">
-              <h3 class="text-center mb-2 text-gray-500" >
+              <h3 class="text-center text-sm mb-2 text-gray-500" >
                 <span x-text="template.category"></span>
               </h3>
               <div class="flex justify-between items-center mx-4 mb-4">
